--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
     <link rel="stylesheet" href="style.css">
-    
+
 
     <script src="https://kit.fontawesome.com/906ae66076.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <section class="top-nav" >
+        <section class="top-nav">
             <div>
                 My Portfolio
             </div>
@@ -24,9 +24,10 @@
                 <div class='menu-button'></div>
             </label>
             <ul class="menu">
-                <li><a href="animationcomingsoon.html" target="_blank">Service</a></li>
+                <li><a href="serviceanimation.html" target="_blank">Service</a></li>
                 <li> Portfolio</li>
-                <li><a href="light-index.html" target="_blank">about me</a></li>
+                <li><a href="light-index.html" target="_blank">about me</a>
+                    <!-- <a href="animationcomingsoon.html" target="_blank"></a></li> -->
                 <li><a href="indexcaffee.html" target="_blank">Contact</a> </li>
                 <li><a href="#socialmedia">social media</a></li>
             </ul>
@@ -58,18 +59,18 @@
             impedit quos asperiores possimus <br>
             officiis illo dicta repellat eligendi adipisci quibusdam, dolore ipsa
             dignissimos veritatis!</p><br>
-        <button class="button-middle-page">get start</button>
+        <button class="button-middle-page"><a href="serviceanimation.html">get start</a> </button>
     </div>
     <div class="social-media" id="socialmedia">
         <div>
             <h1>follow me in social madia</h1>
         </div>
-        <div class="media-link" >
+        <div class="media-link">
             <a href="#"><i class="fa-brands fa-2xl fa-twitter "></i></a>
             <a href="#"><i class="fa-brands  fa-2xl fa-instagram "></i></a>
             <a href="#"><i class="fa-brands fa-2xl fa-linkedin"></i></a>
             <a href="#"><i class="fa-brands fa-2xl fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-2xl fa-square-github"  ></i></a>
+            <a href="#"><i class="fa-brands fa-2xl fa-square-github"></i></a>
         </div>
     </div>
     <!-- middle page ended -->
