--- a/light-index.html
+++ b/light-index.html
@@ -35,7 +35,10 @@
         <br> css and javascript.
         <br>
         </p>
-    
+      <span class="backtomain">
+        <a href="index.html">back to main</a>
+    </span>
+        
     </div>
 </div>
 
