--- a/serviceanimation.html
+++ b/serviceanimation.html
@@ -9,10 +9,21 @@
 </head>
 <body>
     <section class="center">
-        <div>im</div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <div class="items1">
+            <h1>smartphon desinging</h1>
+            <img src="iphone-screen.webp" style="width: 250px; height: 300px;" alt="">
+        </div>
+        <div class="items2"> <h1>smartphon desinging</h1>
+            <img src="tabletmobillaptop.webp" style="width: 250px; height: 300px;" alt=""></div>
+        <div class="items3"> <h1>smartphon desinging</h1>
+            <img src="tabletmobillaptop.webp" style="width: 250px; height: 300px;" alt=""></div>
+        <div class="items4"> <h1>smartphon desinging</h1>
+            <img src="iphonescreen2.png" style="width: 250px; height: 300px;" alt=""></div>
     </section>
+    <footer>
+        <button>
+            <a href="index.html">back to main</a>
+        </button>
+    </footer>
 </body>
 </html>
