--- a/indexcaffee.html
+++ b/indexcaffee.html
@@ -55,8 +55,8 @@
                 <label style="font-size: 1.5rem;" for="lname">Last name:</label><br>
                 <input style="width: 31vw; height: 35px;" type="text" id="lname" name="lname" value="Doe"
                     placeholder="john"><br>
-                <label style="font-size: 1.5rem;" for="email">Enter your email:</label><br>
-                <input style="width: 31vw; height: 35px;" type="email" id="email" name="email"><br>
+                <label style="font-size: 1.5rem;" for="email" >Enter your email:</label><br>
+                <input style="width: 31vw; height: 35px;" type="email" id="email" name="email" placeholder="Email address"><br>
                 <label style="font-size: 1.5rem;" for="email">write your message here</label><br>
                 <textarea name="message" rows="10" style="width: 31vw;">The cat was playing in the garden.</textarea>
                 <br><br>
@@ -65,6 +65,11 @@
 
         </div>
     </div>
+    <footer>
+        <button >
+            <a href="index.html">back to main page</a>
+        </button >
+    </footer>
 </body>
 
 </html>
