--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </label>
             <ul class="menu">
                 <li><a href="serviceanimation.html" target="_blank">Service</a></li>
-                <li> Portfolio</li>
+                <li><a href="#portfoili">Portfolio</a> </li>
                 <li><a href="light-index.html" target="_blank">about me</a>
                     <!-- <a href="animationcomingsoon.html" target="_blank"></a></li> -->
                 <li><a href="indexcaffee.html" target="_blank">Contact</a> </li>
@@ -77,77 +77,24 @@
 
 
     <!-- curriculum vitae section -->
-    <div class="Curriculum-vitae">
+    <div class="Curriculum-vitae" >
         <div class="items1">
-            <div class="container 1">
-                <div class="plate 2"></div>
-                <div class="cup 3">
-                    <div class="top 4">
-                        <div class="vapour 5">
-                            <span style="--i:1;"></span>
-                            <span style="--i:3;"></span>
-                            <span style="--i:16;"></span>
-                            <span style="--i:5;"></span>
-                            <span style="--i:13;"></span>
-                            <span style="--i:20;"></span>
-                            <span style="--i:6;"></span>
-                            <span style="--i:7;"></span>
-                            <span style="--i:10;"></span>
-                            <span style="--i:8;"></span>
-                            <span style="--i:17;"></span>
-                            <span style="--i:11;"></span>
-                            <span style="--i:12;"></span>
-                            <span style="--i:14;"></span>
-                            <span style="--i:2;"></span>
-                            <span style="--i:9;"></span>
-                            <span style="--i:15;"></span>
-                            <span style="--i:4;"></span>
-                            <span style="--i:19;"></span>
-
-
-                        </div>
-                        <div class="circle 6">
-                            <div class="tea 7"></div>
-                        </div>
-                    </div>
-                    <div class="handle 8"></div>
-                </div>
-            </div>
-            <div class="aboutme">
-                <h1>my name is ali</h1>
-                <br>
-                i am working as a journalist
-                <br>
-                <p>i begin as a webdeveloper
-                    i studied as a development in DCI
-                    i run a lot of website with DCI
-                    <br>
-                    i hope that i can work as a developer
-                    <br>
-                </p>
-
-            </div>
-
+            <a href="#" id="portfoili">my portfolio</a>
         </div>
         <div class="items2">
-            <div class="container">
-                <div class="ring"></div>
-                <div class="ring"></div>
-                <div class="ring"></div>
-                <p>I am working after my cours....</p>
-            </div>
-            <!-- <h3>category</h3>
-            <p>project name</p> -->
+  
+            <h3>category</h3>
+            <p>project name</p>
         </div>
         <div class="items3">
             <h3>category</h3>
             <p>project name</p>
         </div>
-        <!-- <div class="items4">
+        <div class="items4">
             <h3>category</h3>
             <p>project name</p>
         </div>
-        <div class="items5">
+        <!-- <div class="items5">
             <h3>category</h3>
             <p>project name</p>
         </div>
