--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </div>
     <div class="social-media" id="socialmedia">
         <div>
-            <h1>follow me in social madia</h1>
+            <h1 class="social-tittle">follow me in social madia</h1>
         </div>
         <div class="media-link">
             <a href="#"><i class="fa-brands fa-2xl fa-twitter "></i></a>
@@ -133,7 +133,7 @@
                 <label style="font-size: 1.5rem;" for="email">write your message here</label><br>
                 <textarea name="message" rows="10" style="width: 31vw;">The cat was playing in the garden.</textarea>
                 <br><br>
-                <input style="width: 610px; height: 35px;" class="submit" type="submit" value="Submit">
+                <input style="width: 30%; height: 35px;" class="submit" type="submit" value="Submit">
             </form>
 
         </div>
