--- a/indexcaffee.html
+++ b/indexcaffee.html
@@ -60,7 +60,7 @@
                 <label style="font-size: 1.5rem;" for="email">write your message here</label><br>
                 <textarea name="message" rows="10" style="width: 31vw;">The cat was playing in the garden.</textarea>
                 <br><br>
-                <input style="width: 610px; height: 35px;" class="submit" type="submit" value="Submit">
+                <input style="width: 35%; height: 35px;" class="submit" type="submit" value="Submit">
             </form>
 
         </div>
