--- a/serviceanimation.html
+++ b/serviceanimation.html
@@ -6,17 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>service animation</title>
     <link rel="stylesheet" href="servicestyle.css">
+    <script src="https://kit.fontawesome.com/906ae66076.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <section class="center">
         <div class="items1">
-            <h1>smartphon desinging</h1>
-            <img src="iphone-screen.webp" style="width: 250px; height: 300px;" alt="">
+            <h1>all of the browsers ans stuff:</h1>
+            <img src="tabletmobillaptop.webp" style="width: 250px; height: 300px;" alt=""></div>
+            
         </div>
-        <div class="items2"> <h1>smartphon desinging</h1>
+        <div class="items2">
+            
+            <h1>Web developer: Html, Css, javascript</h1>
+            <i class="fa-brands fa-html5"></i>
+            <i class="fa-brands fa-css3"></i>
+            <i class="fa-brands fa-js"></i>
+
+            <h1>smartphon desinging</h1>
             <img src="tabletmobillaptop.webp" style="width: 250px; height: 300px;" alt=""></div>
-        <div class="items3"> <h1>smartphon desinging</h1>
-            <img src="tabletmobillaptop.webp" style="width: 250px; height: 300px;" alt=""></div>
+        <div class="items3">
+            <section>
+            <h1>Web developer:</h1>
+            <i class="fa-brands fa-2xl fa-html5" style="color: rgb(211,88,54) ;"></i>  <span>Html</span><br><br><br>
+            <i class="fa-brands fa-2xl fa-css3" style="color: rgb(0,104,186);"></i>  <span>Css</span><br><br><br>
+            <i class="fa-brands fa-2xl fa-js" style="color:rgb(203,169,42);"></i>  <span>javascript</span>
+            </section>
+            </div>
         <div class="items4"> <h1>smartphon desinging</h1>
             <img src="iphonescreen2.png" style="width: 250px; height: 300px;" alt=""></div>
     </section>
