--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <!-- <div class="underline"></div> -->
 
-            <button class="header-text-button">find out more</button>
+            <button class="header-text-button"><a href="./startbootstrap-resume-gh-pages/index.html">find out more</a> </button>
         </div>
 
     </header>
