--- a/light-index.html
+++ b/light-index.html
@@ -36,6 +36,7 @@
         <br>
         </p>
       <span class="backtomain">
+        <a href="./startbootstrap-resume-gh-pages/index.html">resume</a>
         <a href="index.html">back to main</a>
     </span>
         
