--- a/serviceanimation.html
+++ b/serviceanimation.html
@@ -12,7 +12,7 @@
     <section class="center">
         <div class="items1">
             <h1>all of the browsers ans stuff:</h1>
-            <img src="tabletmobillaptop.webp" style="width: 250px; height: 300px;" alt=""></div>
+            <img src="./asset/tabletmobillaptop.webp" style="width: 250px; height: 300px;" alt=""></div>
             
         </div>
         <div class="items2">
@@ -23,7 +23,7 @@
             <i class="fa-brands fa-js"></i>
 
             <h1>smartphon desinging</h1>
-            <img src="tabletmobillaptop.webp" style="width: 250px; height: 300px;" alt=""></div>
+            <img src="./asset/tabletmobillaptop.webp" style="width: 250px; height: 300px;" alt=""></div>
         <div class="items3">
             <section>
             <h1>Web developer:</h1>
@@ -37,7 +37,7 @@
     </section>
     <footer>
         <button>
-            <a href="index.html">back to main</a>
+            <a href="index.html">back to home</a>
         </button>
     </footer>
 </body>
