--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <ul class="menu">
                 <li><a href="serviceanimation.html" target="_blank">Service</a></li>
                 <li><a href="#portfoili">Portfolio</a> </li>
-                <li><a href="light-index.html" target="_blank">about me</a>
+                <li><a href="./startbootstrap-resume-gh-pages/index.html" target="_blank">about me</a>
                     <!-- <a href="animationcomingsoon.html" target="_blank"></a></li> -->
                 <li><a href="indexcaffee.html" target="_blank">Contact</a> </li>
                 <li><a href="#socialmedia">social media</a></li>
@@ -42,7 +42,8 @@
 
             <!-- <div class="underline"></div> -->
 
-            <button class="header-text-button"><a href="./startbootstrap-resume-gh-pages/index.html">find out more</a> </button>
+            <button class="header-text-button"><a href="./startbootstrap-resume-gh-pages/index.html">find out more</a>
+            </button>
         </div>
 
     </header>
@@ -77,18 +78,27 @@
 
 
     <!-- curriculum vitae section -->
-    <div class="Curriculum-vitae" >
+    <div class="Curriculum-vitae">
         <div class="items1">
             <a href="#" id="portfoili">my portfolio</a>
         </div>
         <div class="items2">
-  
-            <h3>category</h3>
-            <p>project name</p>
+
+            <img src="./asset/figma.png" style="width: 100px; height: 100px;" alt="">
+            <img src="./asset/photoshop2.png" style="width: 110px; height: 90px;" alt="">
+            <img src="./asset/indesign2.png" style="width: 100px; height: 100px;" alt="">
+            <img src="./asset/Bootstrap_logo.svg.png" style="width: 100px; height: 100px;" alt="">
+
+            <h3 style="color: #fff; font-size: 3rem;"> Design and enhance <br> your product</h3>
+            <p style="color: white; font-size: 1.5rem;"> From brand strategy to product design, <br>
+                I help you achieve your goals and solve complex problems through design.</p>
         </div>
         <div class="items3">
-            <h3>category</h3>
-            <p>project name</p>
+            <img src="./asset/tabletmobillaptop.webp" style="width:200px ; height: 150px;" alt="">
+
+            <h3 style="color: #fff; font-size: 3rem;"> Build a tailored and responsive website</h3>
+            <p style="color: white; font-size: 1.5rem;">Trust my skills on the Webflow CMS to create a unique, <br>
+                high-performing and quickly delivered website.</p>
         </div>
         <div class="items4">
             <h3>category</h3>
@@ -109,7 +119,20 @@
     </div>
 
     <!-- category section ended -->
+    <div class="container">
+        <div class="items1">
+            <iframe src="http://127.0.0.1:5500/startbootstrap-resume-gh-pages/index.html" frameborder="0" 
+            style="width: 500px; height: 350px;">
 
+            </iframe>
+        </div>
+        <div class="items2"></div>
+        <div class="items3"></div>
+        <div class="items4"></div>
+        <div class="items5"></div>
+        <div class="items6"></div>
+    </div>
+</div>
     <!-- form section started -->
     <div class="form-section">
         <div>
@@ -119,26 +142,15 @@
                 architecto
                 inventore quis vitae nemo suscipit?</p>
             <br>
-        </div>
-        <div>
-            <form action="/action_page.php">
-                <label style="font-size: 1.5rem;" for="fname">First name:</label><br>
-                <input style="width: 31vw; height: 35px;" type="text" id="fname" name="fname" value="John"
-                    placeholder="john"><br>
-                <label style="font-size: 1.5rem;" for="lname">Last name:</label><br>
-                <input style="width: 31vw; height: 35px;" type="text" id="lname" name="lname" value="Doe"
-                    placeholder="john"><br>
-                <label style="font-size: 1.5rem;" for="email">Enter your email:</label><br>
-                <input style="width: 31vw; height: 35px;" type="email" id="email" name="email"><br>
-                <label style="font-size: 1.5rem;" for="email">write your message here</label><br>
-                <textarea name="message" rows="10" style="width: 31vw;">The cat was playing in the garden.</textarea>
-                <br><br>
-                <input style="width: 30%; height: 35px;" class="submit" type="submit" value="Submit">
-            </form>
+        </div >
+    
 
-        </div>
-    </div>
-
+    <i class="scroll-up" id="scroll-up">
+        <a href="#" id="portfoili">
+            <img src="asset/upward.png" class="socicon up-arrow" alt="scroll-up" />
+        </a>
+        
+    </i>
     <footer>
         <span>copyright &#169; 2022- frelancer</span>
     </footer>
