--- a/index.html
+++ b/index.html
@@ -119,18 +119,34 @@
     </div>
 
     <!-- category section ended -->
-    <div class="container">
+    <div class="container" style="display: flex; flex-direction: column;">
         <div class="items1">
             <iframe src="http://127.0.0.1:5500/startbootstrap-resume-gh-pages/index.html" frameborder="0" 
             style="width: 500px; height: 350px;">
 
             </iframe>
         </div>
-        <div class="items2"></div>
-        <div class="items3"></div>
-        <div class="items4"></div>
-        <div class="items5"></div>
-        <div class="items6"></div>
+        <div class="items2">
+            <iframe src="./uibRepository/uib-interactions-secret-unfolds-Aliramazanian/index.html" frameborder="0"
+            style="width: 500px; height: 350px;" ></iframe>
+        </div>
+        <div class="items3">
+            <iframe src="./uibRepository/uib-layout-fixed-vanishing-header-Aliramazanian/index.html" frameborder="0" 
+            style="width: 500px; height: 350px;"></iframe>
+        </div>
+        <div class="items4">
+            <iframe src="./uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html" frameborder="0"
+            style="width: 500px; height: 350px;" ></iframe>
+        </div>
+        <div class="items5">
+            <iframe src="./uibRepository/uib-layout-grid-document-layout-Aliramazanian/index.html" frameborder="0" style="width: 500px; height: 350px;" ></iframe>
+        </div>
+        <div class="items6">
+            <iframe src="./uibRepository/uib-layout-magazine-landing-page-Aliramazanian/index.html" frameborder="0" style="width: 500px; height: 350px;" ></iframe>
+        </div>
+        <!-- <div class="items7">
+            <iframe src="./uibRepository/uib-layout-travel-destination-form-Aliramazanian/index.html" frameborder="0"  style="width: 500px; height: 350px;"></iframe>
+        </div> -->
     </div>
 </div>
     <!-- form section started -->
