--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
     <!-- curriculum vitae section -->
     <div class="Curriculum-vitae">
         <div class="items1">
-            <a href="#" id="portfoili">my portfolio</a>
+            <a href="#" id="portfoili" style="font-size: 5rem; font-weight: 700; ">Service</a>
         </div>
         <div class="items2">
 
-            <img src="./asset/figma.png" style="width: 100px; height: 100px;" alt="">
+            <img src="./asset/figma.png" style="width: 100px; height: 100px; margin-top: 50px;" alt="">
             <img src="./asset/photoshop2.png" style="width: 110px; height: 90px;" alt="">
             <img src="./asset/indesign2.png" style="width: 100px; height: 100px;" alt="">
             <img src="./asset/Bootstrap_logo.svg.png" style="width: 100px; height: 100px;" alt="">
@@ -94,15 +94,18 @@
                 I help you achieve your goals and solve complex problems through design.</p>
         </div>
         <div class="items3">
-            <img src="./asset/tabletmobillaptop.webp" style="width:200px ; height: 150px;" alt="">
+            <img src="./asset/tabletmobillaptop.webp" style="width:200px ; height: 150px; margin-top: 30px;" alt="">
 
             <h3 style="color: #fff; font-size: 3rem;"> Build a tailored and responsive website</h3>
             <p style="color: white; font-size: 1.5rem;">Trust my skills on the Webflow CMS to create a unique, <br>
                 high-performing and quickly delivered website.</p>
         </div>
         <div class="items4">
-            <h3>category</h3>
-            <p>project name</p>
+            <img src="./asset/seo.jpg" style="width: 200px; height: 150px; margin-top: 30px; " alt="">
+            <h3 style="color: #fff; font-size: 3rem;">SEO <br> (Search Engine Optimisation)</h3>
+            <p style="color: white; font-size: 1.5rem;"> 
+                We offer customised SEO (Search Engine <br> Optimisation) training to ensure your website is rising <br> the ranks in
+                Google and staying at the top.</p>
         </div>
         <!-- <div class="items5">
             <h3>category</h3>
@@ -119,38 +122,88 @@
     </div>
 
     <!-- category section ended -->
-    <div class="container" style="display: flex; flex-direction: column;">
-        <div class="items1">
-            <iframe src="http://127.0.0.1:5500/startbootstrap-resume-gh-pages/index.html" frameborder="0" 
-            style="width: 500px; height: 350px;">
+    <div class="container2">
+        <h1 style="position: relative; top: 25px; left: 45%; font-size: 3rem; color: #fff;">portfolio</h1>
+        <div class="iframebox1">
+            <span onclick="window.location.href='http://127.0.0.1:5500/startbootstrap-resume-gh-pages/index.html';" class="text">
+                resume+bootstrap
 
-            </iframe>
+                <div class="iframe-preview">
+                    <iframe src="./startbootstrap-resume-gh-pages/index.html" style="border:0px #FFFFFF none;"
+                        name="test" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="2000px"
+                        width="1000px"></iframe>
+                </div>
+            </span>
+            <!-- <iframe style="width: 100%; height: 100%;" src="http://127.0.0.1:5500/startbootstrap-resume-gh-pages/index.html" frameborder="0">
+            </iframe> -->
         </div>
-        <div class="items2">
-            <iframe src="./uibRepository/uib-interactions-secret-unfolds-Aliramazanian/index.html" frameborder="0"
-            style="width: 500px; height: 350px;" ></iframe>
+        <div class="iframebox2">
+            <span onclick="window.location.href='http://127.0.0.1:5500/light-index.html';" class="text">
+                animation-java
+
+                <div class="iframe-preview">
+                    <iframe src="light-index.html"
+                        style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0" marginheight="0px"
+                        marginwidth="0px" height="2000px" width="1000px"></iframe>
+                </div>
+            </span>
+            <!-- <iframe style="width: 100%; height: 100%;" src="./uibRepository/uib-interactions-secret-unfolds-Aliramazanian/index.html" frameborder="0"></iframe>
+            </div> -->
         </div>
-        <div class="items3">
-            <iframe src="./uibRepository/uib-layout-fixed-vanishing-header-Aliramazanian/index.html" frameborder="0" 
-            style="width: 500px; height: 350px;"></iframe>
-        </div>
-        <div class="items4">
-            <iframe src="./uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html" frameborder="0"
-            style="width: 500px; height: 350px;" ></iframe>
-        </div>
-        <div class="items5">
-            <iframe src="./uibRepository/uib-layout-grid-document-layout-Aliramazanian/index.html" frameborder="0" style="width: 500px; height: 350px;" ></iframe>
-        </div>
-        <div class="items6">
-            <iframe src="./uibRepository/uib-layout-magazine-landing-page-Aliramazanian/index.html" frameborder="0" style="width: 500px; height: 350px;" ></iframe>
-        </div>
-        <!-- <div class="items7">
-            <iframe src="./uibRepository/uib-layout-travel-destination-form-Aliramazanian/index.html" frameborder="0"  style="width: 500px; height: 350px;"></iframe>
+        <div class="iframebox3">
+            <span class="text">
+                animation+css
+
+                <div class="iframe-preview">
+                    <iframe src="animationcomingsoon.html" style="border:0px #FFFFFF none;" name="test" scrolling="no"
+                        frameborder="0" marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
+                </div>
+            </span>
+            <!-- <iframe style="width: 100%; height: 100%;" src="./uibRepository/uib-layout-fixed-vanishing-header-Aliramazanian/index.html" frameborder="0" ></iframe>
         </div> -->
+        </div>
+        <div class="iframebox4">
+            <span  class="text">
+                short project
+
+                <div class="iframe-preview">
+                    <iframe src="./uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html" style="border:0px #FFFFFF none;" name="test" scrolling="no"
+                        frameborder="0" marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
+                </div>
+            </span>
+            <!-- <iframe style="width: 100%; height: 100%;" src="./uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html" frameborder="0"></iframe>
+        </div> -->
+        </div>
+        <div class="iframebox5">
+            <span class="text">
+                short oroject
+
+                <div class="iframe-preview">
+                    <iframe src="./uibRepository/uib-layout-magazine-landing-page-Aliramazanian/"
+                        style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0" marginheight="0px"
+                        marginwidth="0px" height="2000px" width="1000px"></iframe>
+                </div>
+            </span>
+            <!-- <iframe style="width: 100%; height: 100%;" src="./uibRepository/uib-layout-magazine-landing-page-Aliramazanian/index.html" frameborder="0" ></iframe>
+        </div> -->
+        </div>
+        <div class="iframebox6">
+            <span class="text">
+                article
+
+                <div class="iframe-preview">
+                    <iframe src="https://www.proquest.com/openview/5ec07a7ae99b56816e8e8071e17dbac7/1?pq-origsite=gscholar&cbl=2026366&diss=y" style="border:0px #FFFFFF none;"
+                        name="test" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="2000px"
+                        width="1000px"></iframe>
+                </div>
+            </span>
+            <!-- <iframe style="width: 100%; height: 100%;" src="./uibRepository/uib-layout-magazine-landing-page-Aliramazanian/index.html" frameborder="0" ></iframe>
+        </div> -->
+        </div>
     </div>
-</div>
+
     <!-- form section started -->
-    <div class="form-section">
+    <!-- <div class="form-section">
         <div>
             <h1>let's get in touch</h1>
             <br>
@@ -159,13 +212,12 @@
                 inventore quis vitae nemo suscipit?</p>
             <br>
         </div >
-    
-
+    </div> -->
     <i class="scroll-up" id="scroll-up">
         <a href="#" id="portfoili">
             <img src="asset/upward.png" class="socicon up-arrow" alt="scroll-up" />
         </a>
-        
+
     </i>
     <footer>
         <span>copyright &#169; 2022- frelancer</span>
