--- a/index.html
+++ b/index.html
@@ -24,10 +24,9 @@
                 <div class='menu-button'></div>
             </label>
             <ul class="menu">
-                <li><a href="serviceanimation.html" target="_blank">Service</a></li>
+                <li><a href="#" target="_blank">Service</a></li>
                 <li><a href="#portfoili">Portfolio</a> </li>
                 <li><a href="./startbootstrap-resume-gh-pages/index.html" target="_blank">about me</a>
-                    <!-- <a href="animationcomingsoon.html" target="_blank"></a></li> -->
                 <li><a href="indexcaffee.html" target="_blank">Contact</a> </li>
                 <li><a href="#socialmedia">social media</a></li>
             </ul>
@@ -38,16 +37,16 @@
         <div class="text-header">
 
             <h1>My Portfolio</h1>
-            <span>my portfolio</span>
+            <span>i'm a Desiner and speaker who is intersted in the ethics of all</span>
 
-            <!-- <div class="underline"></div> -->
 
-            <button class="header-text-button"><a href="./startbootstrap-resume-gh-pages/index.html">find out more</a>
-            </button>
         </div>
 
     </header>
     <!-- header ended -->
+
+
+
     <!-- middle-page started -->
     <div class="middle-page">
         <h2 class="tittle-middle-page">we've got what you need</h2>
@@ -55,13 +54,12 @@
 
         <div class="underline"></div>
         <br>
-        <p class="tittle-middle-page">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet minima placeat
-            doloremque quae est nihil <br>
-            impedit quos asperiores possimus <br>
-            officiis illo dicta repellat eligendi adipisci quibusdam, dolore ipsa
-            dignissimos veritatis!</p><br>
+        <p class="tittle-middle-page">
+            You need </p><br>
         <button class="button-middle-page"><a href="serviceanimation.html">get start</a> </button>
     </div>
+
+    <!-- social section  -->
     <div class="social-media" id="socialmedia">
         <div>
             <h1 class="social-tittle">follow me in social madia</h1>
@@ -80,103 +78,90 @@
     <!-- curriculum vitae section -->
     <div class="Curriculum-vitae">
         <div class="items1">
-            <a href="#" id="portfoili" style="font-size: 5rem; font-weight: 700; ">Service</a>
+            <a href="#" id="portfoili" style="font-size: 3.5rem; font-weight: 700; ">Service</a>
         </div>
         <div class="items2">
 
-            <img src="./asset/figma.png" style="width: 100px; height: 100px; margin-top: 50px;" alt="">
-            <img src="./asset/photoshop2.png" style="width: 110px; height: 90px;" alt="">
-            <img src="./asset/indesign2.png" style="width: 100px; height: 100px;" alt="">
-            <img src="./asset/Bootstrap_logo.svg.png" style="width: 100px; height: 100px;" alt="">
+            <img src="./asset/figma.png" style="width: 50px; height: 50px; margin-top: 50px;" alt="">
+            <img src="./asset/photoshop2.png" style="width: 60px; height: 50px;" alt="">
+            <img src="./asset/indesign2.png" style="width: 50px; height: 50px;" alt="">
+            <img src="./asset/Bootstrap_logo.svg.png" style="width: 50px; height: 50px;" alt="">
 
-            <h3 style="color: #fff; font-size: 3rem;"> Design and enhance <br> your product</h3>
-            <p style="color: white; font-size: 1.5rem;"> From brand strategy to product design, <br>
+            <h3 style="color: #000; font-size: 1.8rem; margin-top: 50px;"> Design and enhance <br> your product</h3>
+            <p style="color: #000; font-size: 1.5rem;"> From brand strategy to product design,
                 I help you achieve your goals and solve complex problems through design.</p>
         </div>
         <div class="items3">
             <img src="./asset/tabletmobillaptop.webp" style="width:200px ; height: 150px; margin-top: 30px;" alt="">
 
-            <h3 style="color: #fff; font-size: 3rem;"> Build a tailored and responsive website</h3>
-            <p style="color: white; font-size: 1.5rem;">Trust my skills on the Webflow CMS to create a unique, <br>
+            <h3 style="color: #000; font-size: 1.8rem;"> Build a tailored and responsive website</h3>
+            <p style="color: #000; font-size: 1.5rem;">Trust my skills on the Webflow CMS to create a unique,
                 high-performing and quickly delivered website.</p>
         </div>
         <div class="items4">
             <img src="./asset/seo.jpg" style="width: 200px; height: 150px; margin-top: 30px; " alt="">
-            <h3 style="color: #fff; font-size: 3rem;">SEO <br> (Search Engine Optimisation)</h3>
-            <p style="color: white; font-size: 1.5rem;"> 
-                We offer customised SEO (Search Engine <br> Optimisation) training to ensure your website is rising <br> the ranks in
-                Google and staying at the top.</p>
+            <h3 style="color: #000; font-size: 1.8rem; ;">SEO</h3>
+            <p style="color: #000; font-size: 1.5rem; ">
+                We offer customised SEO training to ensure your website is rising
+                the ranks in google and staying at the top.</p>
         </div>
-        <!-- <div class="items5">
-            <h3>category</h3>
-            <p>project name</p>
-        </div>
-        <div class="items6">
-            <h3>category</h3>
-            <p>project name</p>
-        </div> -->
     </div>
-    <div class="download">
+
+    <!-- curriculum vitae section ended  -->
+
+    <!-- <div class="download">
         <h3 class="items7">free download</h3>
         <a href="#">download now</a>
-    </div>
+    </div> -->
 
     <!-- category section ended -->
-    <div class="container2">
-        <h1 style="position: relative; top: 25px; left: 45%; font-size: 3rem; color: #fff;">portfolio</h1>
-        <div class="iframebox1">
-            <span onclick="window.location.href='http://127.0.0.1:5500/startbootstrap-resume-gh-pages/index.html';" class="text">
-                resume+bootstrap
 
+    <!-- portfolio section started -->
+    <div class="container2">
+        <h1 style="color: #fff; position: relative; left: 45%; top: 35px; font-size: 5rem;">Portfolio</h1>
+        <div class="iframebox1">
+            <span class="text"> <a href="./startbootstrap-resume-gh-pages/index.html">resume,bootstrap</a>
                 <div class="iframe-preview">
                     <iframe src="./startbootstrap-resume-gh-pages/index.html" style="border:0px #FFFFFF none;"
                         name="test" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="2000px"
                         width="1000px"></iframe>
                 </div>
             </span>
-            <!-- <iframe style="width: 100%; height: 100%;" src="http://127.0.0.1:5500/startbootstrap-resume-gh-pages/index.html" frameborder="0">
-            </iframe> -->
         </div>
         <div class="iframebox2">
-            <span onclick="window.location.href='http://127.0.0.1:5500/light-index.html';" class="text">
-                animation-java
-
+            <span class="text"> <a href="light-index.html"> animation-java</a>
                 <div class="iframe-preview">
-                    <iframe src="light-index.html"
-                        style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0" marginheight="0px"
-                        marginwidth="0px" height="2000px" width="1000px"></iframe>
+                    <iframe src="light-index.html" style="border:0px #FFFFFF none;" name="test" scrolling="no"
+                        frameborder="0" marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
                 </div>
             </span>
-            <!-- <iframe style="width: 100%; height: 100%;" src="./uibRepository/uib-interactions-secret-unfolds-Aliramazanian/index.html" frameborder="0"></iframe>
-            </div> -->
         </div>
         <div class="iframebox3">
-            <span class="text">
-                animation+css
+            <span class="text"> <a href="animationcomingsoon.html">animation+css</a>
+
 
                 <div class="iframe-preview">
                     <iframe src="animationcomingsoon.html" style="border:0px #FFFFFF none;" name="test" scrolling="no"
                         frameborder="0" marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
                 </div>
             </span>
-            <!-- <iframe style="width: 100%; height: 100%;" src="./uibRepository/uib-layout-fixed-vanishing-header-Aliramazanian/index.html" frameborder="0" ></iframe>
-        </div> -->
         </div>
         <div class="iframebox4">
-            <span  class="text">
-                short project
+            <span class="text"> <a href=" uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html">short
+                    project</a>
+
 
                 <div class="iframe-preview">
-                    <iframe src="./uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html" style="border:0px #FFFFFF none;" name="test" scrolling="no"
-                        frameborder="0" marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
+                    <iframe src="./uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html"
+                        style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0" marginheight="0px"
+                        marginwidth="0px" height="2000px" width="1000px"></iframe>
                 </div>
             </span>
-            <!-- <iframe style="width: 100%; height: 100%;" src="./uibRepository/uib-box-model-the-sweet-spot-v3-Aliramazanian/index.html" frameborder="0"></iframe>
-        </div> -->
         </div>
         <div class="iframebox5">
-            <span class="text">
-                short oroject
+            <span class="text"> <a href="uibRepository/uib-layout-magazine-landing-page-Aliramazanian/index.html">short
+                    oroject</a>
+
 
                 <div class="iframe-preview">
                     <iframe src="./uibRepository/uib-layout-magazine-landing-page-Aliramazanian/"
@@ -184,41 +169,32 @@
                         marginwidth="0px" height="2000px" width="1000px"></iframe>
                 </div>
             </span>
-            <!-- <iframe style="width: 100%; height: 100%;" src="./uibRepository/uib-layout-magazine-landing-page-Aliramazanian/index.html" frameborder="0" ></iframe>
-        </div> -->
         </div>
         <div class="iframebox6">
-            <span class="text">
-                article
+            <span class="text"> <a
+                    href="www.proquest.com/openview/5ec07a7ae99b56816e8e8071e17dbac7/1?pq-origsite=gscholar&cbl=2026366&diss=y">article</a>
+
 
                 <div class="iframe-preview">
-                    <iframe src="https://www.proquest.com/openview/5ec07a7ae99b56816e8e8071e17dbac7/1?pq-origsite=gscholar&cbl=2026366&diss=y" style="border:0px #FFFFFF none;"
-                        name="test" scrolling="no" frameborder="0" marginheight="0px" marginwidth="0px" height="2000px"
-                        width="1000px"></iframe>
+                    <iframe
+                        src="https://www.proquest.com/openview/5ec07a7ae99b56816e8e8071e17dbac7/1?pq-origsite=gscholar&cbl=2026366&diss=y"
+                        style="border:0px #FFFFFF none;" name="test" scrolling="no" frameborder="0" marginheight="0px"
+                        marginwidth="0px" height="2000px" width="1000px"></iframe>
                 </div>
             </span>
-            <!-- <iframe style="width: 100%; height: 100%;" src="./uibRepository/uib-layout-magazine-landing-page-Aliramazanian/index.html" frameborder="0" ></iframe>
-        </div> -->
+
         </div>
     </div>
+    <!-- portfolio section is ended  -->
 
-    <!-- form section started -->
-    <!-- <div class="form-section">
-        <div>
-            <h1>let's get in touch</h1>
-            <br>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Deserunt, nesciunt tempora iure eos nisi
-                architecto
-                inventore quis vitae nemo suscipit?</p>
-            <br>
-        </div >
-    </div> -->
+    <!-- scroll section  started -->
     <i class="scroll-up" id="scroll-up">
         <a href="#" id="portfoili">
             <img src="asset/upward.png" class="socicon up-arrow" alt="scroll-up" />
         </a>
-
     </i>
+
+    <!-- footer section  -->
     <footer>
         <span>copyright &#169; 2022- frelancer</span>
     </footer>
