--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My portfolio</title>
     <link rel="stylesheet" href="style.css">
-
-
     <script src="https://kit.fontawesome.com/906ae66076.js" crossorigin="anonymous"></script>
 </head>
 
@@ -24,7 +22,7 @@
                 <div class='menu-button'></div>
             </label>
             <ul class="menu">
-                <li><a href="#" target="_blank">Service</a></li>
+                <li><a href="#" target="_blank">skills</a></li>
                 <li><a href="#portfoili">Portfolio</a> </li>
                 <li><a href="./startbootstrap-resume-gh-pages/index.html" target="_blank">about me</a>
                 <li><a href="indexcaffee.html" target="_blank">Contact</a> </li>
@@ -65,11 +63,11 @@
             <h1 class="social-tittle">follow me in social madia</h1>
         </div>
         <div class="media-link">
-            <a href="#"><i class="fa-brands fa-2xl fa-twitter "></i></a>
-            <a href="#"><i class="fa-brands  fa-2xl fa-instagram "></i></a>
-            <a href="#"><i class="fa-brands fa-2xl fa-linkedin"></i></a>
-            <a href="#"><i class="fa-brands fa-2xl fa-facebook"></i></a>
-            <a href="#"><i class="fa-brands fa-2xl fa-square-github"></i></a>
+            <a href="#"><i class="fa-brands fa-2xl fa-twitter " style="color: rgb(29,155,240);"></i></a>
+                <!-- <a href="#"><i class="fa-brands  fa-2xl fa-instagram "></i></a> -->
+                <a href="#"><i class="fa-brands fa-2xl fa-linkedin " style="color: rgb(10,102,194);"></i></a>
+                <a href="#"><i class="fa-brands fa-2xl fa-facebook" style="color: rgb(23,119,242);"></i></a>
+                <a href="#"><i class="fa-brands fa-2xl fa-square-github" style="color: rgb(36,41,47); z-index: 3; opacity: 1;"></i></a>
         </div>
     </div>
     <!-- middle page ended -->
@@ -78,7 +76,7 @@
     <!-- curriculum vitae section -->
     <div class="Curriculum-vitae">
         <div class="items1">
-            <a href="#" id="portfoili" style="font-size: 3.5rem; font-weight: 700; ">Service</a>
+            <a href="#" id="portfoili" style="font-size: 3.5rem; font-weight: 700; ">skills</a>
         </div>
         <div class="items2">
 
