--- a/index.html
+++ b/index.html
@@ -129,17 +129,17 @@
         <div class="iframebox2">
             <span class="text"> <a href="light-index.html"> animation-java</a>
                 <div class="iframe-preview">
-                    <iframe src="light-index.html" style="border:0px #FFFFFF none;" name="test" scrolling="no"
+                    <iframe src="./src/light-index.html" style="border:0px #FFFFFF none;" name="test" scrolling="no"
                         frameborder="0" marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
                 </div>
             </span>
         </div>
         <div class="iframebox3">
-            <span class="text"> <a href="animationcomingsoon.html">animation+css</a>
+            <span class="text"> <a href="./src/animationcomingsoon.html">animation+css</a>
 
 
                 <div class="iframe-preview">
-                    <iframe src="animationcomingsoon.html" style="border:0px #FFFFFF none;" name="test" scrolling="no"
+                    <iframe src="./src/animationcomingsoon.html" style="border:0px #FFFFFF none;" name="test" scrolling="no"
                         frameborder="0" marginheight="0px" marginwidth="0px" height="2000px" width="1000px"></iframe>
                 </div>
             </span>
